objects/DownloadFiles__MFDConfig__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>DownloadFiles__Allow_Download_Popup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Download Popup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DownloadFiles__Compress_ZIP_Downloaded_Files__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Compress(ZIP) Downloaded Files</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DownloadFiles__Default_Search_View__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Default Search View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DownloadFiles__Documents_Tab_View__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Documents Tab View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DownloadFiles__Download_CSV_Mapping_File__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Download CSV Mapping File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DownloadFiles__Download_Files_In_Folders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Download Files In Folders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DownloadFiles__Files_Tab_View__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Files Tab View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DownloadFiles__OverRide_Threshload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Threshold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DownloadFiles__Rename_DownloadedFiles_for_Deduplication__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Rename DownloadedFiles for Deduplication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DownloadFiles__Rename_Folders_for_Deduplication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rename Folders for Deduplication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DownloadFiles__Static_Resource_Tab_View__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Static Resource Tab View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DownloadFiles__Threshold_for_Maximum_Download__c</fullName>
        <label>Threshold for Maximum Download</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MassFileDownloadConfig</label>
</CustomObject>